Projet_cont/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amjedingress
  namespace: exam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: projetaseds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mon-service
                port:
                  number: 80
